--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.48",
     "connected-react-router": "^6.6.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
