--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "connected-react-router": "^6.6.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.0.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
